Update and create

--- a/github-testing/github-testing.csproj
+++ b/github-testing/github-testing.csproj
@@ -11,5 +11,6 @@
   <PropertyGroup Condition=" '$(RunConfiguration)' == 'http' " />
   <ItemGroup>
     <PackageReference Include="Octokit" Version="8.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OAuth" Version="2.2.0" />
   </ItemGroup>
 </Project>
